--- a/notes.org
+++ b/notes.org
@@ -111,6 +111,11 @@ http://article.gmane.org/gmane.emacs.orgmode/87472
 * Templates for journals
 
 - http://orgmode.org/worg/exporters/plos-one-template-worg.html
+
+Other :
+
+- https://github.com/vikasrawal/orgpaper/blob/master/orgpapers.org
+
 * Videos about using Org in reproducible research
 
 - [[https://www.youtube.com/watch?v=1-dUkyn_fZA][Emacs + org-mode + python in reproducible research; SciPy 2013 Presentation]]
